attempt to fix images positioning and topIcon mobile view

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -42,13 +42,13 @@ body{
 .btnDesign{
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
-    box-shadow: 0px 0px 0px black;
+    box-shadow: 0px 0px 0px white;
     transition: box-shadow 0.1s, transform 0.2s;
 }
 
 
 .btnDesgin:hover{
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px white;
     transform: translateY(-2px);
 }
 
@@ -61,8 +61,8 @@ body{
     width: 100px;
     height: 100px;
     position: relative;
-    top: 25%;
-    left: 25%;
+    display: block;
+    align-self: auto;
 }
 
 .topIcon{
@@ -76,7 +76,7 @@ body{
 }
 
 #top-icon{
-    
+  display: none;
 }
 
 .piccol{
@@ -99,18 +99,20 @@ body{
 /***** intro section *****/
 #intro{
     margin-top: 50px;
-    height: 40%;
 }
 
 .intro-row{
     background-image: linear-gradient(-15deg, #1f1f1f, #ffff4d);
     color: black !important;
-    
 }
 
 .intro-text-col{
     /*text-align: center;*/
     padding: 5em 1em 1em 5em;
+}
+
+.mainIntroRow{
+    margin-bottom: 4.5rem;
 }
 
 .intro-img-col{
